deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sector
  labels:
    app: sector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sector
  template:
    metadata:
      labels:
        app: sector
    spec:
      containers:
      - name: sector
        image: gcr.io/qwiklabs-gcp-04-098fb448995a/sector:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
