services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sector
  labels:
    app: sector
    service: sector
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: sector
---
