virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sector-vs
spec:
  hosts:
    - '*'
  gateways:
    - default/api-gateway
  http:
    - match:
        - uri:
            prefix: '/sectors/'
      rewrite:
        uri: /
      fault:
        delay:
          percent: 100
          fixedDelay: 1s
      route:
        - destination:
            host: sector
            port:
              number: 8080
      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: gateway-error,connect-failure,refused-stream
---
